[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Inventory.gd" type="Script" id=1]
[ext_resource path="res://Assets/shotgun.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0.294118 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Inventory" type="Control"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 330.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 270.0
color = Color( 0, 0, 0, 0.360784 )

[node name="Panel" type="Panel" parent="."]
margin_left = 462.0
margin_top = 5.0
margin_right = 562.0
margin_bottom = 105.0
custom_styles/panel = SubResource( 6 )

[node name="Selection" type="TextureRect" parent="."]
margin_left = 462.0
margin_top = 5.0
margin_right = 562.0
margin_bottom = 105.0

[node name="Grid" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -154.0
margin_top = 150.0
margin_right = 154.0
margin_bottom = 450.0
columns = 3

[node name="Inv1" type="TextureButton" parent="Grid"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )

[node name="Inv2" type="TextureButton" parent="Grid"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )

[node name="Inv3" type="TextureButton" parent="Grid"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )

[node name="Inv4" type="TextureButton" parent="Grid"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
texture_normal = ExtResource( 2 )

[node name="Inv5" type="TextureButton" parent="Grid"]
margin_left = 104.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 204.0
texture_normal = ExtResource( 2 )

[node name="Inv6" type="TextureButton" parent="Grid"]
margin_left = 208.0
margin_top = 104.0
margin_right = 308.0
margin_bottom = 204.0
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="Grid/Inv1" to="." method="_on_Inv1_pressed"]
[connection signal="pressed" from="Grid/Inv2" to="." method="_on_Inv2_pressed"]
[connection signal="pressed" from="Grid/Inv3" to="." method="_on_Inv3_pressed"]
[connection signal="pressed" from="Grid/Inv4" to="." method="_on_Inv4_pressed"]
[connection signal="pressed" from="Grid/Inv5" to="." method="_on_Inv5_pressed"]
[connection signal="pressed" from="Grid/Inv6" to="." method="_on_Inv6_pressed"]
